src/test/deca/context/invalid/created/sans_objet/affect_incompatible_2.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 13/01/2024

{
   void a;
   float b;

   // Doit etre refuse.
   a = b;
}
